Add admin features and update backend configuration