@@ -6,20 +6,16 @@ import com.homeservice.homecraft_backend.model.dto.response.ProfessionalProfileR
 import com.homeservice.homecraft_backend.model.entity.Professional;
 import com.homeservice.homecraft_backend.model.entity.User;
 import com.homeservice.homecraft_backend.model.enums.ProfessionalType;
+import com.homeservice.homecraft_backend.model.enums.VerificationStatus;
 import com.homeservice.homecraft_backend.repository.ProfessionalRepository;
 import com.homeservice.homecraft_backend.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
-import org.springframework.data.jpa.domain.Specification;
+import org.springframework.data.domain.PageImpl;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -28,170 +24,102 @@ public class ProfessionalService {
     private final ProfessionalRepository professionalRepository;
     private final UserRepository userRepository;
 
-    // Existing methods
+    // PUBLIC: Get ALL Approved Professionals
+    public List<ProfessionalProfileResponse> getAllProfessionals() {
+        return professionalRepository.findAll()
+                .stream()
+                .filter(p -> p.getVerificationStatus() == VerificationStatus.APPROVED)
+                .map(this::mapToResponse)
+                .toList();
+    }
+    // Added for Admin Controller to get ALL (including pending)
+    public List<ProfessionalProfileResponse> getAllProfessionalsForAdmin() {
+        return professionalRepository.findAll()
+                .stream()
+                .map(this::mapToResponse)
+                .toList();
+    }
+
+    // PUBLIC: Get Professionals by Type
+    public List<ProfessionalProfileResponse> getProfessionalsByType(ProfessionalType type) {
+        return professionalRepository.findAll()
+                .stream()
+                .filter(p -> p.getVerificationStatus() == VerificationStatus.APPROVED)
+                .filter(p -> p.getProfessionalType() == type)
+                .map(this::mapToResponse)
+                .toList();
+    }
+
+    // PUBLIC: Get Available Professionals
+    public List<ProfessionalProfileResponse> getAvailableProfessionals() {
+        return professionalRepository.findAll()
+                .stream()
+                .filter(p -> p.getVerificationStatus() == VerificationStatus.APPROVED)
+                .filter(Professional::isAvailable)
+                .map(this::mapToResponse)
+                .toList();
+    }
+
+    // PUBLIC: Get Professional by ID
     public ProfessionalProfileResponse getProfessionalById(Long id) {
         Professional professional = professionalRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Professional not found"));
         return mapToResponse(professional);
     }
 
-    public List<ProfessionalProfileResponse> getAllProfessionals() {
-        return professionalRepository.findAll().stream()
+    // PUBLIC: Search Professionals
+    public Page<ProfessionalProfileResponse> searchProfessionals(ProfessionalSearchRequest request) {
+        List<ProfessionalProfileResponse> results = professionalRepository.findAll()
+                .stream()
+                .filter(p -> p.getVerificationStatus() == VerificationStatus.APPROVED)
+                .filter(p -> request.getProfessionalType() == null || p.getProfessionalType() == request.getProfessionalType())
+                .filter(p -> request.getLocation() == null || p.getLocation().toLowerCase().contains(request.getLocation().toLowerCase()))
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
+
+        return new PageImpl<>(results);
     }
 
-    public List<ProfessionalProfileResponse> getProfessionalsByType(ProfessionalType type) {
-        return professionalRepository.findByProfessionalType(type).stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
-    }
-
-    public List<ProfessionalProfileResponse> getAvailableProfessionals() {
-        return professionalRepository.findByIsAvailableTrue().stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
-    }
-
+    // PROTECTED: Get My Profile
     public ProfessionalProfileResponse getMyProfile(Long userId) {
         Professional professional = professionalRepository.findByUserId(userId)
                 .orElseThrow(() -> new RuntimeException("Professional profile not found"));
         return mapToResponse(professional);
     }
 
+    // PROTECTED: Update My Profile
     @Transactional
     public ProfessionalProfileResponse updateProfile(Long userId, ProfessionalProfileUpdateRequest request) {
         Professional professional = professionalRepository.findByUserId(userId)
                 .orElseThrow(() -> new RuntimeException("Professional profile not found"));
 
-        User user = professional.getUser();
+        professional.setProfessionalType(request.getProfessionalType());
+        professional.setYearsExperience(request.getYearsExperience());
+        professional.setBio(request.getBio());
+        professional.setLocation(request.getLocation());
+        professional.setHourlyRate(request.getHourlyRate());
 
-        // Update User fields
-        if (request.getFullName() != null) {
-            user.setFullName(request.getFullName());
-        }
-        if (request.getPhone() != null) {
-            user.setPhone(request.getPhone());
-        }
-        user.setUpdatedAt(LocalDateTime.now());
+        User user = professional.getUser();
+        user.setFullName(request.getFullName());
+        user.setPhone(request.getPhone());
         userRepository.save(user);
 
-        // Update Professional fields
-        if (request.getProfessionalType() != null) {
-            professional.setProfessionalType(request.getProfessionalType());
-        }
-        if (request.getYearsExperience() != null) {
-            professional.setYearsExperience(request.getYearsExperience());
-        }
-        if (request.getHourlyRate() != null) {
-            professional.setHourlyRate(request.getHourlyRate());
-        }
-        if (request.getBio() != null) {
-            professional.setBio(request.getBio());
-        }
-        if (request.getLocation() != null) {
-            professional.setLocation(request.getLocation());
-        }
-        if (request.getLicenseNumber() != null) {
-            professional.setLicenseNumber(request.getLicenseNumber());
-        }
-        professional.setUpdatedAt(LocalDateTime.now());
-
-        Professional updatedProfessional = professionalRepository.save(professional);
-        return mapToResponse(updatedProfessional);
+        professionalRepository.save(professional);
+        return mapToResponse(professional);
     }
 
+    // PROTECTED: Update Availability
     @Transactional
-    public ProfessionalProfileResponse updateAvailability(Long userId, boolean available) {
+    public ProfessionalProfileResponse updateAvailability(Long userId, boolean isAvailable) {
         Professional professional = professionalRepository.findByUserId(userId)
                 .orElseThrow(() -> new RuntimeException("Professional profile not found"));
 
-        professional.setAvailable(available);
-        professional.setUpdatedAt(LocalDateTime.now());
-
-        Professional updatedProfessional = professionalRepository.save(professional);
-        return mapToResponse(updatedProfessional);
+        professional.setAvailable(isAvailable);
+        professionalRepository.save(professional);
+        return mapToResponse(professional);
     }
 
-    // NEW: Search professionals with filters
-    public Page<ProfessionalProfileResponse> searchProfessionals(ProfessionalSearchRequest request) {
-        Specification<Professional> spec = (root, query, cb) -> cb.conjunction(); // Start with true condition
-
-        // Filter by keyword (name, bio, location)
-        if (request.getKeyword() != null && !request.getKeyword().isEmpty()) {
-            spec = spec.and((root, query, cb) -> {
-                String keyword = "%" + request.getKeyword().toLowerCase() + "%";
-                return cb.or(
-                        cb.like(cb.lower(root.get("user").get("fullName")), keyword),
-                        cb.like(cb.lower(root.get("bio")), keyword),
-                        cb.like(cb.lower(root.get("location")), keyword)
-                );
-            });
-        }
-
-        // Filter by professional type
-        if (request.getProfessionalType() != null) {
-            spec = spec.and((root, query, cb) ->
-                    cb.equal(root.get("professionalType"), request.getProfessionalType())
-            );
-        }
-
-        // Filter by location
-        if (request.getLocation() != null && !request.getLocation().isEmpty()) {
-            spec = spec.and((root, query, cb) ->
-                    cb.like(cb.lower(root.get("location")), "%" + request.getLocation().toLowerCase() + "%")
-            );
-        }
-
-        // Filter by min rating
-        if (request.getMinRating() != null) {
-            spec = spec.and((root, query, cb) ->
-                    cb.greaterThanOrEqualTo(root.get("ratingAverage"), request.getMinRating())
-            );
-        }
-
-        // Filter by max rating
-        if (request.getMaxRating() != null) {
-            spec = spec.and((root, query, cb) ->
-                    cb.lessThanOrEqualTo(root.get("ratingAverage"), request.getMaxRating())
-            );
-        }
-
-        // Filter by min hourly rate
-        if (request.getMinHourlyRate() != null) {
-            spec = spec.and((root, query, cb) ->
-                    cb.greaterThanOrEqualTo(root.get("hourlyRate"), request.getMinHourlyRate())
-            );
-        }
-
-        // Filter by max hourly rate
-        if (request.getMaxHourlyRate() != null) {
-            spec = spec.and((root, query, cb) ->
-                    cb.lessThanOrEqualTo(root.get("hourlyRate"), request.getMaxHourlyRate())
-            );
-        }
-
-        // Filter by availability
-        if (request.getIsAvailable() != null) {
-            spec = spec.and((root, query, cb) ->
-                    cb.equal(root.get("isAvailable"), request.getIsAvailable())
-            );
-        }
-
-        // Sort
-        Sort sort = Sort.unsorted();
-        if (request.getSortBy() != null && !request.getSortBy().isEmpty()) {
-            Sort.Direction direction = "desc".equalsIgnoreCase(request.getSortDirection())
-                    ? Sort.Direction.DESC : Sort.Direction.ASC;
-            sort = Sort.by(direction, request.getSortBy());
-        }
-
-        Pageable pageable = PageRequest.of(request.getPage(), request.getSize(), sort);
-        Page<Professional> professionals = professionalRepository.findAll(spec, pageable);
-
-        return professionals.map(this::mapToResponse);
-    }
-
+    // Helper method to map Entity to Response DTO
     private ProfessionalProfileResponse mapToResponse(Professional professional) {
         ProfessionalProfileResponse response = new ProfessionalProfileResponse();
         response.setId(professional.getId());
@@ -203,33 +131,13 @@ public class ProfessionalService {
         response.setHourlyRate(professional.getHourlyRate());
         response.setBio(professional.getBio());
         response.setLocation(professional.getLocation());
-        response.setAvailable(professional.isAvailable());
         response.setRatingAverage(professional.getRatingAverage());
         response.setTotalReviews(professional.getTotalReviews());
         response.setLicenseNumber(professional.getLicenseNumber());
         response.setVerificationStatus(professional.getVerificationStatus());
         response.setProfilePicture(professional.getProfilePicture());
+        response.setAvailable(professional.isAvailable());
         response.setCreatedAt(professional.getCreatedAt());
-
-        // Map portfolio items
-        if (professional.getPortfolioItems() != null && !professional.getPortfolioItems().isEmpty()) {
-            response.setPortfolioItems(
-                    professional.getPortfolioItems().stream()
-                            .map(item -> {
-                                com.homeservice.homecraft_backend.model.dto.response.PortfolioItemResponse portfolioResponse =
-                                        new com.homeservice.homecraft_backend.model.dto.response.PortfolioItemResponse();
-                                portfolioResponse.setId(item.getId());
-                                portfolioResponse.setTitle(item.getTitle());
-                                portfolioResponse.setDescription(item.getDescription());
-                                portfolioResponse.setImageUrl(item.getImageUrl());
-                                portfolioResponse.setProjectType(item.getProjectType());
-                                portfolioResponse.setCreatedAt(item.getCreatedAt());
-                                return portfolioResponse;
-                            })
-                            .collect(Collectors.toList())
-            );
-        }
-
         return response;
     }
 }
